examples/test/testpolicy17586.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17586
  namespace: namespace99
spec:
  podSelector:
    matchLabels:
      key45: value41
      key38: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value19
      podSelector:
        matchLabels:
          key47: value47
          key28: value36
